--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -526,15 +526,21 @@ video {
   width: 100%;
 }
 
-@media (min-width: 350px) {
+@media (min-width: 320px) {
   .container {
-    max-width: 350px;
+    max-width: 320px;
   }
 }
 
 @media (min-width: 470px) {
   .container {
     max-width: 470px;
+  }
+}
+
+@media (min-width: 625px) {
+  .container {
+    max-width: 625px;
   }
 }
 
@@ -691,11 +697,6 @@ video {
 
 .m-4 {
   margin: 1rem;
-}
-
-.-my-2 {
-  margin-top: -0.5rem;
-  margin-bottom: -0.5rem;
 }
 
 .mx-1 {
@@ -923,6 +924,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.max-h-40 {
+  max-height: 10rem;
 }
 
 .min-h-screen {
@@ -1315,6 +1320,10 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1501,6 +1510,18 @@ video {
 
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-y-3 {
+  row-gap: 0.75rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2800,12 +2821,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2947,20 +2962,26 @@ video {
   content: var(--tw-content);
 }
 
-@media (min-width: 470px) {
+@media (min-width: 625px) {
   .sm\:container {
     width: 100%;
   }
 
-  @media (min-width: 350px) {
+  @media (min-width: 320px) {
     .sm\:container {
-      max-width: 350px;
+      max-width: 320px;
     }
   }
 
   @media (min-width: 470px) {
     .sm\:container {
       max-width: 470px;
+    }
+  }
+
+  @media (min-width: 625px) {
+    .sm\:container {
+      max-width: 625px;
     }
   }
 
@@ -3007,8 +3028,17 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-80:hover {
   --tw-bg-opacity: 0.8;
+}
+
+.hover\:bg-opacity-60:hover {
+  --tw-bg-opacity: 0.6;
 }
 
 .hover\:fill-yellow-500:hover {
@@ -3039,6 +3069,12 @@ video {
 
 .hover\:backdrop-blur-sm:hover {
   --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.hover\:backdrop-blur:hover {
+  --tw-backdrop-blur: blur(8px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -3083,13 +3119,23 @@ video {
   }
 }
 
-@media (min-width: 350px) {
-  .xs\:-mt-16 {
+@media (min-width: 320px) {
+  .xxs\:-mt-16 {
     margin-top: -4rem;
   }
 }
 
 @media (min-width: 470px) {
+  .xs\:-mt-16 {
+    margin-top: -4rem;
+  }
+
+  .xs\:mt-0 {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 625px) {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -3105,6 +3151,10 @@ video {
 
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:items-center {
@@ -3129,8 +3179,16 @@ video {
     margin-bottom: 0px;
   }
 
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
   .md\:ml-32 {
     margin-left: 8rem;
+  }
+
+  .md\:mr-0 {
+    margin-right: 0px;
   }
 
   .md\:mr-32 {
@@ -3155,6 +3213,10 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -3185,6 +3247,10 @@ video {
   .lg\:my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
